<resources>
    <string name="app_name">RecipeBook</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_to_the_widget">Add to the widget</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="xmlcategory">category</string>
    <string name="xmlarea">Area</string>
    <string name="redirects_to_youtube_vedio">redirects to youtube vedio</string>
    <string name="xmlinstructions">Instructions</string>
    <string name="xmlother_info">other info</string>
    <string name="cardcategory_name">category name</string>
    <string name="dispalys_image">dispalys image</string>
    <string name="recipe_image">recipe image</string>
    <string name="favorite_image">favorite image</string>
    <string name="youtube_player">youtube player</string>
    <string name="menucategory">Category</string>
    <string name="menuarea">Area</string>
    <string name="menufavourites">Favourites</string>
    <string name="menusign_out">SIGN OUT</string>
    <string name="enteremail">Enter email address!</string>
    <string name="enterpassword">Enter password!</string>
    <string name="instructpass">We have sent you instructions to reset your password!</string>
    <string name="failedtosend">Failed to send reset email!</string>
    <string name="enteremail1">Enter your registered email id</string>
    <string name="emailenter">Enter email address!</string>
    <string name="passenter">Enter password!</string>
    <string name="passshort">Password too short, enter minimum 6 characters!</string>
    <string name="createuseremail">createUserWithEmail:onComplete:</string>
    <string name="authfailed">Authentication failed.</string>
    <string name="nonetconnnection">No Internet Connection</string>
    <string name="action">Action</string>
    <string name="fabwidget">click on fab to add widget</string>
    <string name="msg1">details</string>
    <string name="msg2">categories</string>
    <string name="m2">strCategory</string>
    <string name="meal">meals</string>
    <string name="strArea">strArea</string>
    <string name="sort">Sort</string>
    <string name="addedtowidget">Added to widget</string>
    <string name="nofavadded">NO favorites added</string>
    <string name="jsonstrMeal">strMeal</string>
    <string name="jsonstrMealThumb">strMealThumb</string>
    <string name="jsonidMeal">idMeal</string>
    <string name="jsonstrInstructions">strInstructions</string>
    <string name="jsonstrYoutube">strYoutube</string>
    <string name="jsonstrSource">strSource</string>

</resources>
