<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:title="@string/menucategory"
                android:id="@+id/id_category_menu"
                android:orderInCategory="1"
                app:showAsAction="collapseActionView"
                android:onClick="clickedCategory">
            </item>

            <item android:title="@string/menuarea"
                android:id="@+id/id_area_menu"
                android:orderInCategory="1"
                app:showAsAction="collapseActionView"
                android:onClick="clickedArea">
            </item>
            <item android:title="@string/menufavourites"
                android:id="@+id/id_favorite"
                android:orderInCategory="1"
                app:showAsAction="collapseActionView"
                android:onClick="clickedfavorite">
            </item>
            <item android:title="@string/menusign_out"
                android:id="@+id/id_signout"
                android:orderInCategory="1"
                app:showAsAction="collapseActionView"
                android:onClick="clickedsignout">
            </item>
        </menu>
    </item>
</menu>